<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    >

  <android.support.v7.widget.CardView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      app:cardCornerRadius="4dp"
      app:cardElevation="0dp"
      app:cardUseCompatPadding="true"
      app:contentPadding="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="1:1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|center_horizontal"
        >

      <ImageView
          android:id="@+id/img"
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_gravity="center"
          android:adjustViewBounds="true"
          android:contentDescription="@string/no_internet_icon"
          android:cropToPadding="true"
          android:padding="4dp"
          android:scaleType="fitXY"
          android:tint="@color/colorPrimary"
          app:layout_constraintBottom_toTopOf="@id/heading"
          app:layout_constraintDimensionRatio="1:1"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/ic_no_wifi"
          />

      <TextView
          android:id="@+id/heading"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="4dp"
          android:text="@string/no_internet_connection"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Headline"
          android:textSize="18sp"
          app:layout_constraintBottom_toTopOf="@id/content"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/img"
          />

      <android.support.v7.widget.AppCompatTextView
          android:id="@+id/content"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="4dp"
          android:text="@string/no_internet_description"
          android:textAlignment="center"
          app:autoSizeTextType="uniform"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/heading"
          />

      <Button
          android:id="@+id/btn_ok"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:layout_marginBottom="8dp"
          android:layout_marginEnd="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:background="@drawable/btn_blue_ripple_white"
          android:fontFamily="@font/source_sans_pro"
          android:text="@string/upload_later"
          android:textColor="@color/white"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/content"
          />
    </android.support.constraint.ConstraintLayout>


  </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>