<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >


  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="150dp"
      android:layout_height="0dp"
      android:adjustViewBounds="true"
      android:cropToPadding="false"
      android:padding="4dp"
      app:layout_constraintBottom_toTopOf="@+id/guideline5"
      app:layout_constraintDimensionRatio="1:1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.75"
      app:srcCompat="@drawable/ic_bomb"
      />

  <android.support.constraint.Guideline
      android:id="@+id/guideline5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.5"
      />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/oops_some_error_occurred"
      android:textAlignment="center"
      android:textColor="@android:color/black"
      android:textSize="@dimen/header_text"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline5"
      />

  <Button
      android:id="@+id/btn_restart_app"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="64dp"
      android:layout_marginStart="64dp"
      android:layout_marginTop="8dp"
      android:background="@drawable/btn_blue_ripple_white"
      android:text="@string/okay_cool"
      android:textColor="@color/white"
      android:textSize="@dimen/content_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:padding="4dp"
      android:text="@string/error_description"
      android:textAlignment="center"
      android:textSize="@dimen/content_text"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      />

</android.support.constraint.ConstraintLayout>